Part 2 of calculator

--- a/calculator.css
+++ b/calculator.css
@@ -6,21 +6,22 @@ body{
 
 .container{
     background-color:teal;
-    padding: 15px 25px 15px 150px;
-    margin: 10% 25%;
+    padding: 2%;
+    margin: 3% 30%;
     border-radius: 50px;
     display: flex;
     flex-direction: column;
 }
 
 .calculations {
-    padding: 5px 25px;
+    padding: 1% 10%;
 }
 
 .container h1{
     color:goldenrod;
     letter-spacing: 0.2em;
     text-transform: uppercase;
+    text-align: center;
 }
 
 button{
@@ -28,7 +29,16 @@ button{
     border-radius: 10px;
     background-color:rgba(255, 255, 255, .3);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    size: 15px;
-    margin: 20px 200px 0px 200px;
-    padding: 10px;
+    size: 10%;
+    margin: 5% 20% 0% 20%;
+    padding: 2%;
+}
+
+.res{
+    display: flex;
+    flex-direction:row;
+}
+
+h2{
+    font-size: 1rem;
 }
